[package]
authors = ["Victor Melo <xunjin.coder@gmail.com>"]
edition = "2018"
name = "my-redis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4.0"
bytes = "1"